erDiagram
    customer ||--o{ address : "адреса"
    customer ||--o{ customer_order : "заказы"
    address ||--o{ customer_order : "доставка"
    restaurant ||--o{ menu_category : "категории"
    restaurant ||--o{ menu_item : "меню"
    restaurant ||--o{ customer_order : "заказы"
    restaurant ||--o{ restaurant_cuisine : "кухни"
    restaurant ||--o{ restaurant_payment_method : "оплаты"
    cuisine ||--o{ restaurant_cuisine : "рестораны"
    menu_category ||--o{ menu_item : "блюда"
    menu_item ||--o{ order_item : "позиции"
    customer_order ||--o{ order_item : "позиции"
    customer_order ||--o| payment : "оплата"
    customer_order ||--o| order_review : "отзыв"
    courier |o--o{ customer_order : "доставка"
    promo_code |o--o{ customer_order : "скидка"

    customer {
        bigint customer_id PK
        text full_name
        text phone UK
        text email
        timestamptz created_at
    }
    address {
        bigint address_id PK
        bigint customer_id FK
        text city
        text street
        text building
        text apartment
    }
    restaurant {
        bigint restaurant_id PK
        text name
        text phone
        boolean is_active
    }
    cuisine {
        int cuisine_id PK
        text name UK
    }
    restaurant_cuisine {
        bigint restaurant_id PK
        int cuisine_id PK
    }
    restaurant_payment_method {
        bigint restaurant_id PK
        payment_method method PK
    }
    menu_category {
        bigint category_id PK
        bigint restaurant_id FK
        text name
    }
    menu_item {
        bigint item_id PK
        bigint restaurant_id FK
        bigint category_id FK
        text name
        numeric price
        boolean is_available
    }
    courier {
        bigint courier_id PK
        text full_name
        text phone UK
        text vehicle_type
    }
    promo_code {
        bigint promo_id PK
        text code UK
        discount_type discount_type
        numeric discount_value
        date valid_from
        date valid_to
    }
    customer_order {
        bigint order_id PK
        bigint customer_id FK
        bigint restaurant_id FK
        bigint address_id FK
        bigint courier_id FK
        bigint promo_id FK
        order_status status
        timestamptz created_at
        timestamptz paid_at
        timestamptz delivered_at
    }
    order_item {
        bigint order_id PK
        bigint item_id PK
        bigint restaurant_id FK
        int quantity
        numeric unit_price
    }
    payment {
        bigint payment_id PK
        bigint order_id FK "UNIQUE, 1:1"
        numeric amount
        payment_method method
        payment_status status
        timestamptz paid_at
    }
    order_review {
        bigint review_id PK
        bigint order_id FK "UNIQUE, 0..1"
        smallint restaurant_rating
        smallint courier_rating
        text comment
        timestamptz created_at
    }
